# voice-to-text

./: .gitignore  README.md  package.json  voice-to-text.desktop
scripts/: download-model.sh  install.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  hotkey.rs  lib.rs  main.rs  transcribe.rs  typing.rs
ui/: index.html  main.js  style.css
