[package]
name = "voice-to-text"
version = "0.1.0"
edition = "2021"
description = "Speech-to-text using whisper.cpp with double-Alt hotkey"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
whisper-rs = { version = "0.14", features = ["cuda"] }
cpal = "0.15"
rdev = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
parking_lot = "0.12"
dirs = "6"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
